[package]
name = "raycaster"
version = "0.1.0"
edition = "2021"
authors = ["Markus Moenig"]
description = "A multi-threaded raycaster engine for creating games similar to Wolfenstein3D"
license = "MIT"
repository = "https://github.com/markusmoenig/Raycaster.git"
keywords = ["raycasting", "graphics", "game", "engine", "retro"]

[dependencies]
rustc-hash = "1.1.0"
rayon = "1.6.1"
