[package]
name = "raycaster"
version = "0.3.1"
edition = "2021"
authors = ["Markus Moenig"]
description = "A multi-threaded raycaster engine for creating game graphics similar to Wolfenstein3D"
license = "MIT"
repository = "https://github.com/markusmoenig/Raycaster.git"
keywords = ["raycasting", "graphics", "game", "engine", "retro"]

[features]
default = []
single_threaded = []

[dependencies]
rustc-hash = "1.1.0"
rand = "0.8.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.6.1"
